# pure_pursuit_core

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  pure_pursuit_coreConfig.cmake
include/path_tracker/: Math.h  PathTracker.h
src/: Math.cpp  PathTracker.cpp
test/: MathTests.cpp  PathTrackingTests.cpp
